<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".DashboaredPage">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/send_string"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rcv_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/rcv_string"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/info_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/info_string"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>