<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/Welcome"
                android:textColor="@color/app_blue1"
                android:textSize="@dimen/font_xxxl"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/enterotp_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xxxl"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/otphint2_string"
                android:textColor="@color/app_hint1"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/view_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-15dp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/app_yellow2"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_input_view"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/rectangular_ash_border_white"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:hint="@string/phonehint_string"
                        android:inputType="number"
                        android:textColorHint="@color/app_hint1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/rectangular_blue"
                    android:text="@string/submit_string"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <LinearLayout
                    android:id="@+id/otp_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <in.aabhasjindal.otptextview.OtpTextView
                        android:id="@+id/otp_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/app_blue1"
                        app:bar_enabled="false"
                        app:height="40dp"
                        app:length="4"
                        app:otp_box_background="@color/white"
                        app:otp_text_size="24dp"
                        app:width="40dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submit_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/rectangular_blue"
                        android:text="@string/verify_string"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xl"
                        android:textStyle="bold"
                        app:backgroundTint="@null" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/view_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/uploadfront_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xxxl"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/nrc_first"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/uploadfront_string"
                android:src="@drawable/ic_upload2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/uploadback_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xxxl"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/nrc_second"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/uploadfront_string"
                android:src="@drawable/ic_upload2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_nrc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rectangular_blue"
                android:text="@string/next_string"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>
    </LinearLayout>
</layout>