<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NRCeditpage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/nrcidhint_string"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nrcidedit_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/app_blue1" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/nrcidhintbr_string"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nrcideditbr_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/app_blue1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/namehint_string"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameedit_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColor="@color/app_blue1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/namehintbr_string"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameeditbr_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColor="@color/app_blue1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/dobhint_string"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dobedit_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/app_blue1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/dobhintbr_string"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dobeditbr_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/app_blue1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/fathint_string"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fatedit_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColor="@color/app_blue1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/fathintbr_string"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fateditbr_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColor="@color/app_blue1" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/genedit_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selfie_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/rectangular_blue"
                    android:text="@string/next_string"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/ic_user"
                    android:contentDescription="@string/uploadback_string" />

                <TextView
                    android:id="@+id/submit_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/selfi_string"
                    android:textColor="@color/app_blue1"
                    android:textSize="@dimen/font_xxxl"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/selfihint_string"
                    android:textColor="@color/app_hint1"
                    android:textSize="@dimen/font_l"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_selfi" />

                <CheckBox
                    android:id="@+id/register_tnc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:checked="true"
                    android:text="@string/tnc_string" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/rectangular_blue"
                    android:text="@string/submit_string"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <!--<LinearLayout
                    android:id="@+id/submit_info_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/submit_info_image"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/ic_upload"
                        android:contentDescription="@string/app_name" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submit_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/submit_first_string"
                        android:textColor="@color/white" />

                </LinearLayout>-->

                <!--<LinearLayout
                    android:id="@+id/submit_second_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/submit_second_image"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/ic_upload"
                        android:contentDescription="@string/app_name"
                        android:visibility="gone" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submit_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="Register"
                        android:textColor="@color/white" />


                </LinearLayout>-->
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>